--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="./style.css" ˛>
   </head>
   <body>
-    <h1>My CV</h1>
+    <h1>CV</h1>
+    <hr>
+    <h2>Nicki Bress</h2>
+    <div id="personal">
+       
+       <h4>Frontend Developer</h4>
+       <h3>Budapest</h3>
+       <h3>Email: <span><i>eo.22.mmx@gmail.com</i></span></h3>
+    </div>
+    <div id="skills">
+      <h4>Skills:</h4>
+      <h3>
+        HTML, CSS, JavaScript, Figma to Design
+      </h3>
+    </div>
+    <div id="education">
+
+      <h4>Education </h4>
+      <h3>Frontend Developer - <span>2024 <i>Codecademy</i></span></h3>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
